# py-ollama

./: .gitignore  AGENTS.PREFERENCES.md  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  clean.sh  install.sh  pyproject.toml  speed.config.json
.github/skills/understand-project/: SKILL.md
.opencode/commands/refactoring-speed/: SKILL.md
configs/: model_config.json  presets.json
src/: cli.py  models.py
src/ai/: __init__.py  modelfile.py  modelfile_error.py  ollama.py  temporary_modelfile.py
src/ai/config/: __init__.py  config_loader.py  model_config.py  ollama_config.py
src/ai/modelfile/: __init__.py  error.py  modelfile.py  temporary.py
src/ai/models/: __init__.py  base.py  deepseek.py  default.py  devstral.py  gemma.py  granite.py  llama.py  mistral.py  qwen.py
src/ai/ollama/: __init__.py  check.py  client.py  exceptions.py  ollama.py
src/ai/orchestration/: __init__.py  cli.py  hardware.py
src/ai/presets/: __init__.py  balanced.py  coder.py  coder_balanced.py  coder_fast.py  coder_fast_preset.py  creative.py  creative_preset.py  long_context.py  long_context_preset.py  model.py  (+1 more)
src/helpers/: __init__.py  cli_args.py  default_helpers.py
src/models/: Deepseek.py  Default.py  Gemma.py  Llama.py  Mistral.py  OllamaModelConfig.py  Qwen.py  __init__.py  base.py  config.py
src/ollama_tweak_advanced/: __init__.py  cli.py  modelfile.py  ollama.py  presets.py
src/scripts/: __init__.py  bench.py  generate.py  refresh.py  speed.py  tree.py
tests/: conftest.py  test_create_machine.py  test_modelfile.py  test_presets.py
tests/ai/: test_performance.py
(+16 files in other folders)
